# PayFlux

./: .gitignore  .vercelignore  README.md  package-lock.json  vercel.json
anchor/: .gitignore  Anchor.toml
anchor/programs/PayFlux/: Cargo.toml
anchor/programs/PayFlux/src/: lib.rs
anchor/scripts/: calculate-discriminators.js  calculate-discriminators.ts
anchor/src/: PayFlux-exports.ts  index.ts
anchor/tests/: PayFlux.spec.ts
backend/: .env  .env.example  package.json  pnpm-lock.yaml  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/middleware/: errorHandler.ts  validateRequest.ts
backend/src/routes/: notifications.ts  transactions.ts  webhook.ts
backend/src/services/: transactionService.ts
backend/src/utils/: logger.ts  sms.ts
src/app/: layout.tsx  page.tsx
src/app/PayFlux/: page.tsx
src/app/market-maker/: page.tsx
src/components/PayFlux/: MarketMakerDashboard.tsx  PayFlux-data-access.tsx  PayFlux-feature.tsx  PayFlux-ui.tsx  PaymentForm.tsx
src/components/ui/: ui-layout.tsx
